--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-jogo-memoria/work/
-jogo-memoria/transcript
-*.mti
-*.mpf
-*.vhd.bak
-*.wlf
-*.do
+*/work/
+*/transcript
+*/*.mti
+*/*.mpf
+*/*.vhd.bak
+*/*.wlf
+*/*.do
